Fix alignment

--- a/src/styles/UserButton.css
+++ b/src/styles/UserButton.css
@@ -20,7 +20,6 @@
 
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding: 12px 24px 24px 24px;
 }
 
